unpackaged/main/default/objects/Application__c/fields/Accounts_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Email__c</fullName>
    <formula>Head_Office__r.Accounts_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts Email</label>
    <type>Text</type>
</CustomField>