unpackaged/main/default/objects/Application__c/fields/Actual_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Assessment_Date__c</fullName>
    <label>Actual Assessment Date</label>
    <type>Date</type>
</CustomField>