unpackaged/main/default/objects/Application__c/fields/Add_Visit_Approval_Date_inspector__c.field-meta.xml
<CustomField>
    <fullName>Add_Visit_Approval_Date_inspector__c</fullName>
    <label>Add. Visit Approval Date (inspector)</label>
    <type>Date</type>
</CustomField>