unpackaged/main/default/objects/Application__c/fields/Add_Visit_Approval_Date_Office__c.field-meta.xml
<CustomField>
    <fullName>Add_Visit_Approval_Date_Office__c</fullName>
    <label>Add. Visit Approval Date (Office)</label>
    <type>Date</type>
</CustomField>