unpackaged/main/default/objects/Application__c/fields/Add_Visit_Approved_By_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Add_Visit_Approved_By_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add. Visit Approved By (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications3cde</relationshipName>
    <type>Lookup</type>
</CustomField>