unpackaged/main/default/objects/Application__c/fields/Add_Visit_approved_by_inspector__c.field-meta.xml
<CustomField>
    <fullName>Add_Visit_approved_by_inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add. Visit approved by (inspector)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applicationsru6E</relationshipName>
    <type>Lookup</type>
</CustomField>