unpackaged/main/default/objects/Application__c/fields/Add_Visits_Approval_Date_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Add_Visits_Approval_Date_Certifier__c</fullName>
    <label>Add. Visits Approval Date (Certifier)</label>
    <type>Date</type>
</CustomField>