unpackaged/main/default/objects/Application__c/fields/Additional_Visit__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit__c</fullName>
    <label>Additional Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>