unpackaged/main/default/objects/Application__c/fields/Additional_Visit_Approved__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit_Approved__c</fullName>
    <description>If both Office and Certifier has approved, this will result in &#39;Yes&#39;</description>
    <formula>IF(
 ISPICKVAL(Office_Approved__c, &quot;Yes&quot;) &amp;&amp;
				 ISPICKVAL(Certifier_Approved__c, &quot;Yes&quot;), &#39;Yes&#39;, &#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Visit Approved</label>
    <type>Text</type>
</CustomField>