unpackaged/main/default/objects/Application__c/fields/Additional_Visit_Approved_Flag__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit_Approved_Flag__c</fullName>
    <description>Flag field to display a tick or a cross if an additional visit has been approved or not</description>
    <formula>IF( Additional_Visit_Approved__c = &#39;Yes&#39;, IMAGE(&quot;/resource/ValidationCheckSmall&quot;, &#39;Yes&#39;, 24,24), IMAGE(&quot;/resource/ValidationCrossSmall&quot;, &#39;No&#39;, 24,24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Visit Approved</label>
    <type>Text</type>
</CustomField>