unpackaged/main/default/objects/Application__c/fields/Additional_Visit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit_Complete__c</fullName>
    <formula>IF(
AND(
NOT(ISPICKVAL(Visit_Type__c, &quot;&quot;)),
NOT(ISBLANK(Visit_Deadline__c)),
				
NOT(ISPICKVAL(Reason_for_Visit__c, &quot;&quot;)),
			
			
NOT(ISBLANK(Check__c)),
NOT(ISBLANK(				 Allocated_Inspector__c )),
				
			
				
NOT(ISBLANK(Site__c)),
				
			
NOT(ISBLANK(Report__c)),
NOT(ISBLANK(Membership_Number__c))),
&#39;Yes&#39;,
&#39;No&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Visit Complete</label>
    <type>Text</type>
</CustomField>