unpackaged/main/default/objects/Application__c/fields/Additional_Visit_Complete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit_Complete_Flag__c</fullName>
    <formula>IF( Additional_Visit_Complete__c = &#39;Yes&#39;, IMAGE(&quot;/resource/ValidationCheckSmall&quot;, &#39;Paid&#39;, 24,24), IMAGE(&quot;/resource/ValidationCrossSmall&quot;, &#39;Not Paid&#39;, 24,24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Visit Complete</label>
    <type>Text</type>
</CustomField>