unpackaged/main/default/objects/Application__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Site__r.BillingStreet +  BR() +
 Site__r.BillingCity +  BR() + 
 TEXT(Site__r.County__c) +  BR() +
 Site__r.BillingCountry +  BR() +
 Site__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>