unpackaged/main/default/objects/Application__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I have read and agreed to the terms of the SCI Certification UK scheme regulations and RSPCA Assured membership agreement.</inlineHelpText>
    <label>Agreement</label>
    <type>Checkbox</type>
</CustomField>