unpackaged/main/default/objects/Application__c/fields/All_Documentation_Submitted__c.field-meta.xml
<CustomField>
    <fullName>All_Documentation_Submitted__c</fullName>
    <description>Ticks when the following documentation as been populated:
Assessment Checklist
Assessment Report
Evidence</description>
    <formula>NOT(ISBLANK(Evidence__c)) &amp;&amp; 
				NOT(ISBLANK(Assessment_Checklist__c)) &amp;&amp; 
								NOT(ISBLANK( Assessment_Report__c))</formula>
    <label>All Documentation Submitted</label>
    <type>Checkbox</type>
</CustomField>