unpackaged/main/default/objects/Application__c/fields/Allocated_Inspector__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is completing the additional visit?</description>
    <inlineHelpText>Who is completing the additional visit?</inlineHelpText>
    <label>Allocated Inspector</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Contract_Assessor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Assessor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicationsIfW5</relationshipName>
    <type>Lookup</type>
</CustomField>