unpackaged/main/default/objects/Application__c/fields/Alternative_Invoice_Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Invoice_Sender_Email__c</fullName>
    <inlineHelpText>Please populate an alternative email to use for sending the invoice, otherwise, the default is help@rspcaassured.org.uk</inlineHelpText>
    <label>Alternative Invoice Sender Email</label>
    <type>Email</type>
</CustomField>