unpackaged/main/default/objects/Application__c/fields/Amount_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Ex_VAT__c</fullName>
    <label>Amount (excluding VAT)</label>
    <summarizedField>Application_Line_Item__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Application_Line_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>