unpackaged/main/default/objects/Application__c/fields/Animals_at_Assessment_not_populated__c.field-meta.xml
<CustomField>
    <fullName>Animals_at_Assessment_not_populated__c</fullName>
    <label>Animals at Assessment not populated</label>
    <summaryFilterItems>
        <field>Application_Unit__c.Animals_At_Assessment__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Application_Unit__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>