unpackaged/main/default/objects/Application__c/fields/Applicant_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Full_Name__c</fullName>
    <formula>Applicant_Contact__r.FirstName  &amp; &quot; &quot;  &amp;  Applicant_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Full Name</label>
    <type>Text</type>
</CustomField>