unpackaged/main/default/objects/Application__c/fields/Applicant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mobile__c</fullName>
    <formula>Applicant_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Mobile</label>
    <type>Text</type>
</CustomField>