unpackaged/main/default/objects/Application__c/fields/Applicant_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Salutation__c</fullName>
    <formula>TEXT(Applicant_Contact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Salutation</label>
    <type>Text</type>
</CustomField>