unpackaged/main/default/objects/Application__c/fields/Application_Approved_By_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_By_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Certification Review - was the application/renewal complete, correct and paid?</inlineHelpText>
    <label>Application Approved By (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>