unpackaged/main/default/objects/Application__c/fields/Application_Approved_By_Certifier_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_By_Certifier_Date__c</fullName>
    <label>Application Approved By (Certifier) Date</label>
    <type>Date</type>
</CustomField>