unpackaged/main/default/objects/Application__c/fields/Application_Approved_By_Office__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_By_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrative review</description>
    <inlineHelpText>Administrative Review - Was the application/renewal complete, correct and paid?</inlineHelpText>
    <label>Application Approved By (Office)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>