unpackaged/main/default/objects/Application__c/fields/ApplicationConfirmationLogged__c.field-meta.xml
<CustomField>
    <fullName>ApplicationConfirmationLogged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApplicationConfirmationLogged</label>
    <type>Checkbox</type>
</CustomField>