unpackaged/main/default/objects/Application__c/fields/Approvals_Complete__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Complete__c</fullName>
    <description>This formula checks if all approvals have been complete and will return a yes or no.</description>
    <formula>IF(
   AND(
       NOT(ISBLANK(Application_Approved_By_Office__c)),
       NOT(ISBLANK(Application_Approved_By_Certifier__c)),
       NOT(ISBLANK(Assessment_Approved_By_Office__c)),
       NOT(ISBLANK(Assessment_Approved_By_Assessor__c)),
       NOT(ISBLANK(Assessment_Approved_By_Certifier__c)),
       NOT(ISBLANK(Evidence_Approved_By_Office__c)),
       NOT(ISBLANK(Evidence_Approved_By_Assessor__c)),
       NOT(ISBLANK(Evidence_Approved_By_Certifier__c)),
							Reject__c = false,
							Approved_for_Renewal__c = true
      ),
   &#39;Yes&#39;,
   &#39;No&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns &#39;Yes&#39; if all approvals are complete for this application and &#39;No&#39; if they are not all complete.</inlineHelpText>
    <label>Approvals Complete</label>
    <type>Text</type>
</CustomField>