unpackaged/main/default/objects/Application__c/fields/Approvals_Complete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Complete_Flag__c</fullName>
    <formula>IF( Approvals_Complete__c = &#39;Yes&#39;, IMAGE(&quot;/resource/ValidationCheckSmall&quot;, &#39;Paid&#39;, 24,24), IMAGE(&quot;/resource/ValidationCrossSmall&quot;, &#39;Not Paid&#39;, 24,24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approvals Complete Flag</label>
    <type>Text</type>
</CustomField>