unpackaged/main/default/objects/Application__c/fields/Approved_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Renewal (Certifier)</label>
    <type>Checkbox</type>
</CustomField>