unpackaged/main/default/objects/Application__c/fields/Assessment_Approved_By_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approved_By_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Technical review - are you satisfied you have completed and submitted all applicable documentation (see documentation below)?</inlineHelpText>
    <label>Assessment Approved By (Assessor)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>