unpackaged/main/default/objects/Application__c/fields/Assessment_Approved_By_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approved_By_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Certification review - are you satisfied the assessor has correctly completed and submitted all applicable documentation (see documentation below)?&#39;</inlineHelpText>
    <label>Assessment Approved By (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications5</relationshipName>
    <type>Lookup</type>
</CustomField>