unpackaged/main/default/objects/Application__c/fields/Assessment_Approved_By_Certifier_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approved_By_Certifier_Date__c</fullName>
    <label>Assessment Approved By (Certifier) Date</label>
    <type>Date</type>
</CustomField>