unpackaged/main/default/objects/Application__c/fields/Assessment_Approved_By_Office__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approved_By_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Administrative review - has the assessor completed and submitted all applicable documentation (see documentation below)?</inlineHelpText>
    <label>Assessment Approved By (Office)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>