unpackaged/main/default/objects/Application__c/fields/Assessment_Approved_By_Office_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approved_By_Office_Date__c</fullName>
    <label>Assessment Approved By (Office) Date</label>
    <type>Date</type>
</CustomField>