unpackaged/main/default/objects/Application__c/fields/Assessment_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Checklist__c</fullName>
    <label>Assessment Checklist</label>
    <type>Url</type>
</CustomField>