unpackaged/main/default/objects/Application__c/fields/Assessment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completed_Date__c</fullName>
    <label>Assessment Completed Date</label>
    <type>Date</type>
</CustomField>