unpackaged/main/default/objects/Application__c/fields/Assessment_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is ticked from the workflow if the assessment confirmation is sent.</description>
    <inlineHelpText>Checkbox is ticked from the workflow if the assessment confirmation is sent.</inlineHelpText>
    <label>Assessment Confirmation Sent?</label>
    <type>Checkbox</type>
</CustomField>