unpackaged/main/default/objects/Application__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <description>Cannot exceed the deadline date; can be updated if rearranged</description>
    <inlineHelpText>The date the site will be assessed</inlineHelpText>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>