unpackaged/main/default/objects/Application__c/fields/Assessment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Deadline__c</fullName>
    <description>Auto-populated with date 3 months from the date of application, or 10 months from the date of renewal.</description>
    <inlineHelpText>The date by which the assessment must have been completed</inlineHelpText>
    <label>Assessment Deadline</label>
    <type>Date</type>
</CustomField>