unpackaged/main/default/objects/Application__c/fields/Assessment_Report__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Report__c</fullName>
    <inlineHelpText>White copy</inlineHelpText>
    <label>Assessment Report</label>
    <type>Url</type>
</CustomField>