unpackaged/main/default/objects/Application__c/fields/Assessment_Required__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Required</label>
    <type>Checkbox</type>
</CustomField>