unpackaged/main/default/objects/Application__c/fields/Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Status__c</fullName>
    <formula>IF(ISNULL(Assessment_Date__c), &quot;Not Completed&quot;,
  IF(Assessment_Date__c &lt;= Assessment_Deadline__c, &quot;On Time&quot;, &quot;Late&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Status</label>
    <type>Text</type>
</CustomField>