unpackaged/main/default/objects/Application__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Function: member services select an assessor; system then automatically emails them.</description>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Allocated Assessor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You can only select an assessor user to be allocated for this application.</errorMessage>
        <filterItems>
            <field>User.Assessor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Contract_Assessor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>