unpackaged/main/default/objects/Application__c/fields/Assessor_Email__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Email__c</fullName>
    <formula>Assessor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessor Email</label>
    <type>Text</type>
</CustomField>