unpackaged/main/default/objects/Application__c/fields/Assessor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Full_Name__c</fullName>
    <formula>Assessor__r.FirstName &amp; &quot; &quot; &amp;  Assessor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessor Full Name</label>
    <type>Text</type>
</CustomField>