unpackaged/main/default/objects/Application__c/fields/Assessor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Mobile__c</fullName>
    <formula>Assessor__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessor Mobile</label>
    <type>Text</type>
</CustomField>