unpackaged/main/default/objects/Application__c/fields/BR_Queueable__c.field-meta.xml
<CustomField>
    <fullName>BR_Queueable__c</fullName>
    <formula>Bulk_Renewal__r.Queueable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BR Queueable</label>
    <type>Checkbox</type>
</CustomField>