unpackaged/main/default/objects/Application__c/fields/Bulk_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Renewal</label>
    <referenceTo>Bulk_Renewal__c</referenceTo>
    <relationshipLabel>Renewal Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>