unpackaged/main/default/objects/Application__c/fields/Calculated_Stage__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Stage__c</fullName>
    <formula>IF(RecordType.DeveloperName == &#39;Renewal&#39;,TEXT( Renewal_Stage__c) ,TEXT(Stage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Stage</label>
    <type>Text</type>
</CustomField>