unpackaged/main/default/objects/Application__c/fields/Cancel_Application__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate that an application is cancelled.</description>
    <inlineHelpText>Field to indicate that an application is cancelled.</inlineHelpText>
    <label>Cancel Application</label>
    <type>Checkbox</type>
</CustomField>