unpackaged/main/default/objects/Application__c/fields/Certificate_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Email Sent</label>
    <type>Checkbox</type>
</CustomField>