unpackaged/main/default/objects/Application__c/fields/Certification_Record__c.field-meta.xml
<CustomField>
    <fullName>Certification_Record__c</fullName>
    <inlineHelpText>RF2</inlineHelpText>
    <label>Certification Record</label>
    <type>Url</type>
</CustomField>