unpackaged/main/default/objects/Application__c/fields/Certifier_Approved__c.field-meta.xml
<CustomField>
    <fullName>Certifier_Approved__c</fullName>
    <description>For Certifiers to mark if the Additional Visit has been approved or not.</description>
    <inlineHelpText>For Certifiers to mark if the Additional Visit has been approved or not.</inlineHelpText>
    <label>Certifier Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>