unpackaged/main/default/objects/Application__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <inlineHelpText>Please use a separate line for each thing to be checked. This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Check</label>
    <type>TextArea</type>
</CustomField>