unpackaged/main/default/objects/Application__c/fields/Checklist_Completion__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Completion__c</fullName>
    <label>Checklist Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>