unpackaged/main/default/objects/Application__c/fields/Comments_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Comments_Certifier__c</fullName>
    <description>Area for Certifier to make comments.</description>
    <label>Comments (Certifier)</label>
    <type>TextArea</type>
</CustomField>