unpackaged/main/default/objects/Application__c/fields/Communications__c.field-meta.xml
<CustomField>
    <fullName>Communications__c</fullName>
    <inlineHelpText>Use this to link to any additional communication, e.g., letters or emails, in a Google Drive folder.</inlineHelpText>
    <label>Communications</label>
    <type>Url</type>
</CustomField>