unpackaged/main/default/objects/Application__c/fields/Completed_Checklist_Count__c.field-meta.xml
<CustomField>
    <fullName>Completed_Checklist_Count__c</fullName>
    <label>Completed Checklist Count</label>
    <summaryFilterItems>
        <field>Assessments__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessments__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>