unpackaged/main/default/objects/Application__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Primary Contact email</description>
    <formula>Site__r.Primary_Contact__r.Account.Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Contact&#39;s E-Mail Address</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>