unpackaged/main/default/objects/Application__c/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <description>Mobile of primary contact</description>
    <formula>Site__r.Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mobile Number of Primary Contact</inlineHelpText>
    <label>Contact Mobile</label>
    <type>Text</type>
</CustomField>