unpackaged/main/default/objects/Application__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Primary Contact Full name</description>
    <formula>Site__r.Primary_Contact_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Contact&#39;s Name</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>