unpackaged/main/default/objects/Application__c/fields/Current_User_is_Allocated_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Allocated_Assessor__c</fullName>
    <formula>Assessor__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Allocated Assessor</label>
    <type>Checkbox</type>
</CustomField>