unpackaged/main/default/objects/Application__c/fields/Current_User_is_Allocated_Inspector__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Allocated_Inspector__c</fullName>
    <formula>Allocated_Inspector__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Allocated Inspector</label>
    <type>Checkbox</type>
</CustomField>