unpackaged/main/default/objects/Application__c/fields/Custom_Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Invoice_Message__c</fullName>
    <label>Custom Invoice Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>