unpackaged/main/default/objects/Application__c/fields/Date_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Renewed__c</fullName>
    <label>Date Renewed</label>
    <type>Date</type>
</CustomField>