unpackaged/main/default/objects/Application__c/fields/DTA__c.field-meta.xml
<CustomField>
    <fullName>DTA__c</fullName>
    <label>Desktop Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>