unpackaged/main/default/objects/Application__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <inlineHelpText>Link to evidence folder</inlineHelpText>
    <label>Evidence</label>
    <type>Url</type>
</CustomField>