unpackaged/main/default/objects/Application__c/fields/Evidence_Approved_By_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Approved_By_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Technical review - are you satisfied with the evidence the member has submitted?</inlineHelpText>
    <label>Evidence Approved By (Assessor)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications7</relationshipName>
    <type>Lookup</type>
</CustomField>